--- a/static/user.html
+++ b/static/user.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>CTZN</title>
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/fontawesome.css">
+    <link rel="stylesheet" href="/css/tailwind.css">
     <link rel="icon" href="/favicon.png">
   </head>
   <body>
