--- a/static/communities.html
+++ b/static/communities.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Communities - CTZN</title>
+    <title>Communities | CTZN</title>
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/fontawesome.css">
     <link rel="stylesheet" href="/css/tailwind.css">
