--- a/static/account.html
+++ b/static/account.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/fontawesome.css">
     <link rel="stylesheet" href="/css/tailwind.css">
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="/img/favicon.png">
   </head>
   <body class="bg-white sm:bg-gray-50">
     <ctzn-account></ctzn-account>
