--- a/static/post.html
+++ b/static/post.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/fontawesome.css">
     <link rel="stylesheet" href="/css/tailwind.css">
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="/img/favicon.png">
   </head>
   <body class="bg-gray-50">
     <ctzn-post-page></ctzn-post-page>
