--- a/static/signup.html
+++ b/static/signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/fontawesome.css">
     <link rel="stylesheet" href="/css/tailwind.css">
     <link rel="icon" href="/img/favicon.png">
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <ctzn-signup></ctzn-signup>
