--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,6 @@
   </head>
   <body class="bg-gray-50">
     <ctzn-app></ctzn-app>
-    <script type="module" src="/js/main.build.js"></script>
+    <script type="module" src="/js/app.build.js"></script>
   </body>
 </html>
