--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,10 @@
     <link rel="manifest" href="/manifest.json">
   </head>
   <body class="bg-gray-50">
+    <div class="relative bg-red-100 text-red-800 font-semibold text-center" style="z-index: 1000">
+      CTZN is kind of broken right now, sorry everybody.
+      I'm digging into it Thursday.
+    </div>
     <ctzn-app></ctzn-app>
     <script type="module" src="/js/app.build.js"></script>
   </body>
