Add image lazy-loading

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
   </head>
   <body class="bg-gray-100">
     <ctzn-app></ctzn-app>
+    <script src="/vendor/lazy-sizes.min.js"></script>
     <script type="module" src="/js/app.build.js"></script>
   </body>
 </html>
