Add ctzn-html; implement ctzn-html in profiles

--- a/static/index.html
+++ b/static/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="/img/favicon.png">
     <link rel="manifest" href="/manifest.json">
   </head>
-  <body class="bg-gray-100">
-    <ctzn-app></ctzn-app>
+  <body class="bg-gray-200">
+    <app-root></app-root>
     <script src="/vendor/lazy-sizes.min.js"></script>
     <script type="module" src="/js/app.build.js"></script>
   </body>
