added meta tags for ios PWA

--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="/css/fontawesome.css">
     <link rel="stylesheet" href="/css/tailwind.css">
     <link rel="icon" href="/img/favicon.png">
-    <link rel="apple-touch-icon" href="/img/icon-192.png">
     <link rel="manifest" href="/manifest.json">
+
+    <link rel="apple-touch-icon" href="/img/icon-32.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="/img/icon-144.png" sizes="144x144">
+    <link rel="apple-touch-icon" href="/img/icon-192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="/img/icon-512.png" sizes="512x512">
   </head>
   <body class="bg-gray-200">
     <app-root></app-root>
