Move to a much lighter and whitespace-heavy aesthetic (WIP)

--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="/img/icon-192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="/img/icon-512.png" sizes="512x512">
   </head>
-  <body class="bg-gray-200 antialiased">
+  <body class="antialiased">
     <app-root></app-root>
     <script src="/vendor/lazy-sizes.min.js"></script>
     <script type="module" src="/js/app.build.js"></script>
